--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -13,6 +13,7 @@ Dependencies:
     'frameworks/threadweaver': '@latest-kf6'
     'frameworks/kcolorscheme': '@latest-kf6'
     'libraries/kirigami-addons': '@latest-kf6'
+    'libraries/mpvqt': '@latest'
     'third-party/qtkeychain': '@latest'
 
 - 'on': ['Linux', 'FreeBSD', 'Windows']
