--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -15,5 +15,9 @@ Dependencies:
     'libraries/kirigami-addons': '@latest-kf6'
     'third-party/qtkeychain': '@latest'
 
+- 'on': ['Linux', 'FreeBSD', 'Windows']
+  'require':
+    'frameworks/qqc2-desktop-style': '@latest-kf6'
+
 Options:
   require-passing-tests-on: [ 'Linux', 'FreeBSD', 'Windows' ]
