Add missing icon for android

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -288,6 +288,7 @@ if(ANDROID)
         view-media-playlist
         source-playlist
         arrow-down
+        arrow-up
         go-next
         overflow-menu
         checkbox
