--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -125,6 +125,7 @@ qt_add_qml_module(kasts URI org.kde.kasts
         qml/SearchBar.qml
         qml/FilterInlineMessage.qml
         qml/ChapterSlider.qml
+        qml/HoverLinkIndicator.qml
     RESOURCES
         ../icons/media-playback-cloud.svg
         ../kasts.svg
