--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -20,6 +20,7 @@ apps:
       - home
       - audio-record
       - network-manager-observe
+      - network-status
 slots:
   session-dbus-interface:
     interface: dbus
