--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -18,6 +18,7 @@ Dependencies:
 - 'on': ['Linux', 'FreeBSD', 'Windows']
   'require':
     'frameworks/qqc2-desktop-style': '@latest-kf6'
+    'frameworks/kcrash': '@latest-kf6'
 
 Options:
   require-passing-tests-on: [ 'Linux', 'FreeBSD', 'Windows' ]
