snapcraft: Add alsa-lib layout and asound packages.

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -23,6 +23,9 @@ apps:
       - network-status
 environment:
   ALSA_CONFIG_PATH: "/snap/kf6-core22/current/etc/asound.conf"
+layout:
+  /usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR/alsa-lib:
+    bind: $SNAP/usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR/alsa-lib
 slots:
   session-dbus-interface:
     interface: dbus
@@ -54,6 +57,9 @@ parts:
       - libnm0
       - libsecret-1-0
       - mpg123
+      - libasound2
+      - libasound2-plugins
+      - libasound2-data
     cmake-parameters:
       - -DCMAKE_INSTALL_PREFIX=/usr
       - -DCMAKE_BUILD_TYPE=Release
