Enable appx packages

--- a/.craft.ini
+++ b/.craft.ini
@@ -2,6 +2,7 @@
 ; SPDX-License-Identifier: CC0-1.0
 
 [BlueprintSettings]
+kde/applications/kasts.packageAppx = True
 #kde/frameworks.version=master
 #kde/plasma.version=master
 #kde/unreleased.version=master
