--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,4 +12,5 @@ include:
       - /gitlab-templates/windows-qt6.yml
       - /gitlab-templates/flatpak.yml
       - /gitlab-templates/craft-android-qt6-apks.yml
-      - /gitlab-templates/craft-windows-mingw64-qt6.yml
+#      - /gitlab-templates/craft-windows-mingw64-qt6.yml
+      - /gitlab-templates/craft-windows-x86-64-qt6.yml
