Add password-manager-service plug to allow saving nextcloud gpodder password. Ref bug 497049

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -21,6 +21,7 @@ apps:
       - audio-record
       - network-manager-observe
       - network-status
+      - password-manager-service
 slots:
   session-dbus-interface:
     interface: dbus
