Call KIconTheme::initTheme to fix icon recoloring on other platforms
This should fix icons and recoloring in general for other platforms,
like Windows.

Link: https://planet.kde.org/christoph-cullmann-2024-05-11-kde-applications-icons/

BUG: 491713

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -12,6 +12,7 @@ Dependencies:
     'frameworks/kconfig': '@latest-kf6'
     'frameworks/threadweaver': '@latest-kf6'
     'frameworks/kcolorscheme': '@latest-kf6'
+    'frameworks/kiconthemes': '@latest-kf6'
     'libraries/kirigami-addons': '@latest-kf6'
     'third-party/qtkeychain': '@latest'
 
