--- a/REUSE.toml
+++ b/REUSE.toml
@@ -12,7 +12,7 @@ SPDX-FileCopyrightText = "2020 Tobias Fella <tobias.fella@kde.org>"
 SPDX-License-Identifier = "CC0-1.0"
 
 [[annotations]]
-path = ["src/settingsmanager.kcfg", ".flatpak-manifest.json"]
+path = ["src/settingsmanager.kcfgc", "src/settingsmanager.kcfg", ".flatpak-manifest.json"]
 precedence = "aggregate"
 SPDX-FileCopyrightText = "2021 Bart De Vries <bart@mogwai.be>"
 SPDX-License-Identifier = "CC0-1.0"
