--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ include(KDECompilerSettings NO_POLICY_SCOPE)
 include(ECMAddAppIcon)
 include(ECMDeprecationSettings)
 include(ECMAddAndroidApk)
+include(ECMQmlModule)
 if(NOT ANDROID)
     include(KDEClangFormat)
 endif()
