Make volume icon adapt to volume
Depending on the actual volume the icon will be audio-volume-high,
audio-volume-medium, audio-volume-low or audio-volume-muted

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -321,8 +321,10 @@ if(ANDROID)
         kaccounts-nextcloud
         clock
         viewimage
-        player-volume-muted
-        player-volume
+        audio-volume-muted
+        audio-volume-high
+        audio-volume-medium
+        audio-volume-lowCO
         application-exit
         starred-symbolic
         non-starred-symbolic
