Do not open a second instance if app is already running
BUG: 482840

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -21,5 +21,10 @@ Dependencies:
     'frameworks/qqc2-desktop-style': '@latest-kf6'
     'frameworks/kcrash': '@latest-kf6'
 
+- 'on': ['Linux', 'FreeBSD']
+  'require':
+    'frameworks/kdbusaddons': '@latest-kf6'
+    'frameworks/kwindowsystem': '@latest-kf6'
+
 Options:
   require-passing-tests-on: [ 'Linux', 'FreeBSD', 'Windows' ]
