--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,3 +15,4 @@ include:
       - /gitlab-templates/craft-android-qt6-apks.yml
 #      - /gitlab-templates/craft-windows-mingw64-qt6.yml
       - /gitlab-templates/craft-windows-x86-64-qt6.yml
+      - /gitlab-templates/snap-snapcraft-lxd.yml
