--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: 2024-2025 Scarlett Moore <sgmoore@kde.org>
+# SPDX-FileCopyrightText: 2024-2026 Scarlett Moore <sgmoore@kde.org>
 #
 # SPDX-License-Identifier: CC0-1.0
 ---
@@ -43,6 +43,10 @@ slots:
     interface: dbus
     name: org.kde.kasts
     bus: session
+  mpris-kasts:
+    interface: dbus
+    name: org.mpris.MediaPlayer2.org.kde.kasts
+    bus: session
 parts:
   kasts:
     parse-info:
@@ -50,6 +54,9 @@ parts:
     plugin: cmake
     source: .
     source-type: local
+    build-snaps:
+      - kde-qt6-core24-sdk/latest/beta
+      - kf6-core24-sdk/latest/beta
     build-packages:
       - libtag1-dev
       - libvlc-dev
@@ -71,9 +78,6 @@ parts:
       - -DCMAKE_BUILD_TYPE=Release
       - -DQT_MAJOR_VERSION=6
       - -DBUILD_TESTING=OFF
-    build-environment: &build-environment
-      - LD_LIBRARY_PATH: >
-         "/snap/mesa-2404/current/usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR:$CRAFT_STAGE/usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR:/snap/kde-qt6-core24-sdk/current/usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR/libproxy:$LD_LIBRARY_PATH"
     prime:
       - -usr/lib/*/cmake/*
       - -usr/include/*
