Add a NetworkAccessManager as central place to hold network settings
This is done in anticipation of needing network access in threads other
than the main one. We will need to have a separate QNetworkAccessManager
per thread, but since we are doing additional things like setting a
proper user agent it's better to put these central settings into a
dedicated class.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,22 +6,23 @@ add_subdirectory(kmediasession)
 
 add_executable(kasts
     main.cpp
-    fetcher.cpp
-    database.cpp
-    datatypes.cpp
-    entry.cpp
-    feed.cpp
-    enclosure.cpp
-    chapter.cpp
-    datamanager.cpp
     audiomanager.cpp
+    chapter.cpp
+    database.cpp
+    datamanager.cpp
+    datatypes.cpp
+    enclosure.cpp
+    entry.cpp
     error.cpp
+    feed.cpp
+    fetcher.cpp
     utils/enclosuredownloadjob.cpp
     utils/storagemanager.cpp
     utils/storagemovejob.cpp
     utils/updatefeedjob.cpp
     utils/fetchfeedsjob.cpp
     utils/systrayicon.cpp
+    utils/networkaccessmanager.cpp
     utils/networkconnectionmanager.cpp
     utils/colorschemer.cpp
     utils/windowutils.cpp
